--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -155,7 +155,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
