--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,31 +291,31 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11089256.md#1" target="_blank">一位军人法轮功学员 家庭工作中的风范</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/12/n8391689.md#1" target="_blank">一个江湖亡命汉的不绝之命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/26/n12433135.md#1">济公袈裟罩山 古井运木</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482835.md#1">【十字路口】拜登家再爆通共门 中共渗透联合国</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12479366.md#1">章子怡当裁缝剪T恤 亲自秀模特各式穿搭</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480185.md#1">11天连飞1.2万公里 几百克重小鸟创世界纪录</a></li>
-<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/8/n12461525.md#1">【纽约调查】纽约百年来10场 大运动带来的变化</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12480185.md#1">11天连飞1.2万公里 几百克重小鸟创世界纪录</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/11/n12468511.htm">【最新疫情10.18】欧美病例激增 但死亡人数少</a></p><hr>
