--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -155,7 +155,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
